Update Bab I Bab II

--- a/Bab I - Pendahuluan.tex
+++ b/Bab I - Pendahuluan.tex
@@ -7,85 +7,86 @@
 \section{Latar Belakang}
 Transformasi digital merupakan salah satu faktor yang memengaruhi keberlangsungan organisasi.
 Perkembangan Teknologi Informasi (TI) memaksa organisasi untuk menyesuaikan proses bisnis dan layanan.
-Menurut \textcite{juraida2024enterprise}, \textit{Enterprise Architecture} (EA)  merupakan elemen yang berperan dalam mendukung transformasi digital
+Menurut \textcite{juraida2024enterprise}, Arsitektur \textit{Enterprise} (AE) merupakan elemen yang berperan dalam mendukung transformasi digital
 melalui penyelarasan antara strategi bisnis dan strategi Teknologi Informasi (TI) organisasi.
 
-Aspek EA yang diperlukan salah satunya yaitu tata kelola yang jelas untuk mengelola arsitektur, mengambil keputusan, dan kepatuhan terhadap arsitektur yang dirancang.
-Karakterisitik EA harus diintegrasikan dengan praktik manajemen tata kelola agar EA dapat dikelola secara berkelanjutan \autocite{nugroho2016enterprise}.
+Aspek AE yang diperlukan salah satunya yaitu tata kelola yang jelas untuk mengelola arsitektur, mengambil keputusan, dan kepatuhan terhadap arsitektur yang dirancang.
+Karakterisitik AE harus diintegrasikan dengan praktik manajemen tata kelola agar AE dapat dikelola secara berkelanjutan \autocite{nugroho2016enterprise}.
 
-\textcite{virantina2020digital} menegaskan efektivitas EA sangat bergantung kepada kemampuan organisasi dalam mengelola siklus hidup arsitektur, termasuk bagaimana EA digunakan untuk mendukung proses transformasi digital, manajemen data, dan efisiensi operasional. 
-Penerapan tata kelola EA juga memastikan pembagian peran, tanggung jawab, dan mekanisme evaluasi untuk memastikan keberlanjutan EA.
+\textcite{virantina2020digital} menegaskan efektivitas AE sangat bergantung kepada kemampuan organisasi dalam mengelola siklus hidup arsitektur, termasuk bagaimana AE digunakan untuk mendukung proses transformasi digital, manajemen data, dan efisiensi operasional. 
+Penerapan tata kelola AE juga memastikan pembagian peran, tanggung jawab, dan mekanisme evaluasi untuk memastikan keberlanjutan AE.
 
-Untuk memastikan tata kelola EA berjalan efektif, TOGAF menyediakan \textit{Architecture Capability Maturity Model} (ACMM) yang digunakan untuk menilai tingkat kematangan kapabilitas arsitektur organisasi.
-Model ini memiliki 5 tingkatan dan pada level 3 (\textit{defined}), proses tata kelola EA telah terdokumentasi, dilaksanakan secara konsisten, dan memiliki struktur peran yang jelas \autocite{TOGAF_Standard_10th}.
-Dengan demikian, tingkat kematangan ini dijadikan acuan untuk menilai tata kelola EA Paragon Corp dan mengevaluasi dimensi yang perlu diperbaiki.
+Untuk memastikan tata kelola AE berjalan efektif, TOGAF menyediakan \textit{Architecture Capability Maturity Model} (ACMM) yang digunakan untuk menilai tingkat kematangan kapabilitas arsitektur organisasi.
+Model ini memiliki 5 tingkatan dan pada level 3 (\textit{defined}), proses tata kelola AE telah terdokumentasi, dilaksanakan secara konsisten, dan memiliki struktur peran yang jelas \autocite{TOGAF_Standard_10th}.
+Dengan demikian, tingkat kematangan ini dijadikan acuan untuk menilai tata kelola AE Paragon Corp dan mengevaluasi dimensi yang perlu diperbaiki.
 
-Penerapan EA memerlukan evaluasi terhadap seberapa efektif tata kelolanya.
+Penerapan AE memerlukan evaluasi terhadap seberapa efektif tata kelolanya.
 Efektivitas ini bisa diketahui melalui tingkat kepatuhan proyek terhadap standar, dokumentasi yang dihasilkan, dan keterlibatan pemangku kepentingan \autocite{foorthuis2016theory}.
 Cara ini selaras dengan TOGAF, yaitu pentingnya melakukan evaluasi terhadap kapabilitas arsitektur untuk meningkatkan tingkat kematangan tata kelola organisasi.
 
-Pada praktik organisasi, tata kelola EA yang gagal menimbulkan banyak risiko.
-Paragon Corp merupakan salah satu perusahaan yang memiliki alur tata kelola EA tetapi belum dijalankan secara formal. 
+Pada praktik organisasi, tata kelola AE yang gagal menimbulkan banyak risiko.
+Paragon Corp merupakan salah satu perusahaan yang memiliki alur tata kelola AE tetapi belum dijalankan secara formal. 
 Meskipun tim \textit{Enterprise Architecture} di Paragon Corp baru dibentuk sejak tahun lalu, belum ada mekanisme rutin untuk \textit{architecture review} dan persetujuan arsitektur.
 Kondisi ini menyebabkan duplikasi sistem dan ketiadaan standar arsitektural karena belum ada referensi terhadap arsitektur sebelumnya.
-Evaluasi tata kelola EA menemukan bahwa aspek perancangan EA yang sudah didefinisikan, namun belum dikelola secara menyeluruh akan menghambat efektivitas EA sebagai kerangka strategis \autocite{ghiffari2022evaluasi}.
+Evaluasi tata kelola AE menemukan bahwa aspek perancangan AE yang sudah didefinisikan, namun belum dikelola secara menyeluruh akan menghambat efektivitas AE sebagai kerangka strategis \autocite{ghiffari2022evaluasi}.
 
-Dengan mempertimbangkan tantangan tersebut, tugas akhir ini berfokus kepada analisis perbaikan tata kelola EA sehingga meningkatkan efektivitas peran EA dalam mengambil keputusan di Paragon Corp. 
+Dengan mempertimbangkan tantangan tersebut, tugas akhir ini berfokus kepada analisis perbaikan tata kelola AE sehingga meningkatkan efektivitas peran AE dalam mengambil keputusan di Paragon Corp. 
 
 % --- Rumusan Masalah ---
 \section{Rumusan Masalah}
 Berdasarkan latar belakang masalah yang telah diuraikan di atas, rumusan masalah yang akan menjadi pokok pembahasan dalam pengerjaan tugas akhir ini adalah sebagai berikut:
 \begin{enumerate}
-\item	Bagaimana efektivitas tata kelola EA saat ini di Paragon Corp?
-\item	Apa saja \textit{gap} yang perlu ditangani untuk mencapai tingkat kematangan level 3 tata kelola EA?
-\item	Bagaimana rancangan tata kelola EA yang lebih terstruktur dan mampu memberikan dampak terhadap pengambilan keputusan strategis perusahaan?
-\item   Bagaimana cara mengukur peningkatan efektivitas dan dampak penerapan EA setelah dilakukan perbaikan tata kelola?
+\item	Bagaimana alur tata kelola AE saat ini di Paragon Corp?
+\item	Apa saja \textit{gap} yang perlu ditangani untuk mencapai tingkat kematangan level 3 tata kelola AE?
+\item	Bagaimana rancangan tata kelola AE yang lebih terstruktur dan mampu memberikan dampak terhadap pengambilan keputusan strategis perusahaan?
+\item   Bagaimana cara mengukur peningkatan efektivitas dan dampak penerapan AE setelah dilakukan perbaikan tata kelola?
 \end{enumerate}
 
 % --- Tujuan ---
 \section{Tujuan}
 Tujuan dari tugas akhir ini adalah sebagai berikut:
 \begin{enumerate}
-\item	Menganalisis kondisi tata kelola EA yang saat ini diterapkan di Paragon Corp.
-\item	Mengidentifikasi \textit{gap} antara kondisi saat ini dengan \textit{best practice} EA pada ingkat kematangan level 3 tata kelola EA.
-\item	Merancang model perbaikan tata kelola EA yang efektif dan sesuai dengan konteks organisasi.
-\item   Mengevaluasi dampak penerapan model perbaikan terhadap efektivitas kinerja EA.
+\item	Menganalisis kondisi tata kelola AE yang saat ini diterapkan di Paragon Corp.
+\item	Mengidentifikasi \textit{gap} antara kondisi saat ini dengan \textit{best practice} AE pada tingkat kematangan level 3 tata kelola AE.
+\item	Merancang model perbaikan tata kelola AE yang efektif dan sesuai dengan konteks organisasi.
+\item   Mengevaluasi dampak penerapan model perbaikan terhadap efektivitas kinerja AE.
 \end{enumerate}
 
 % --- Metodologi Pengerjaan TA ---
 \section{Metodologi}
 Metodologi pengerjaan tugas akhir berikut ini menjelaskan tahapan-tahapan yang dilakukan selama proses penyusunan tugas akhir untuk menjawab rumusan masalah dan mencapai tujuan tugas akhir.
-Pendekatan yang digunakan bersifat deskriptif kualitatif, dengan fokus pada analisis kondisi saat ini, identifikasi \textit{gap}, serta perancangan perbaikan model tata kelola EA yang sesuai dengan konteks organisasi Paragon Corp.
+Pendekatan yang digunakan bersifat deskriptif kualitatif, dengan fokus pada analisis kondisi saat ini, identifikasi \textit{gap}, serta perancangan perbaikan model tata kelola AE yang sesuai dengan konteks organisasi Paragon Corp.
 
 Secara umum, tahapan metodologi tugas akhir ini terdiri atas beberapa langkah berikut:
 \begin{enumerate}
     \item {Tahap investigasi dan pengumpulan fakta} \\
-    Tahap ini bertujuan untuk memahami konteks organisasi dan kondisi penerapan EA di Paragon Corp. Kegiatan yang dilakukan meliputi:
+    Tahap ini bertujuan untuk memahami konteks organisasi dan kondisi penerapan AE di Paragon Corp. Kegiatan yang dilakukan meliputi:
     \begin{enumerate}[a.]
-        \item Studi internal terkait artefak EA, alur kerja, dan kebijakan perusahaan.
+        \item Studi internal terkait artefak AE, alur kerja, dan kebijakan perusahaan.
         \item Observasi terhadap penggunaan \textit{platform} SAP LeanIX dalam proses manajemen arsitektur.
         \item Wawancara dengan pihak terkait untuk mengidentifikasi praktik tata kelola dan pola kolaborasi yang berjalan saat ini. \\
     \end{enumerate}
 
     \item {Tahap studi literatur dan analisis teoretis} \\
-    Pada tahap ini dilakukan pengumpulan, pengelompokan, dan penelaahan literatur yang relevan mengenai \textit{Enterprise Architecture}, \textit{EA Governance}, dan \textit{EA Maturity Model}. Literatur yang digunakan mencakup standar internasional seperti TOGAF, artikel ilmiah, serta studi kasus penerapan EA di industri sejenis. 
+    Pada tahap ini dilakukan pengumpulan, pengelompokan, dan penelaahan literatur yang relevan mengenai Arsitektur \textit{Enterprise}, Tata Kelola Arsitektur \textit{Enterprise}, dan \textit{EA Maturity Model}. 
+    Literatur yang digunakan mencakup standar internasional seperti TOGAF dan artikel ilmiah. 
     Hasil analisis literatur akan dijelaskan secara sistematis pada Bab II – Studi Literatur sebagai landasan teoretis. \\
 
     \item {Tahap analisis kondisi saat ini dan identifikasi \textit{gap}} \\
-    Berdasarkan hasil investigasi dan teori pendukung, dilakukan analisis terhadap efektivitas tata kelola EA saat ini di Paragon Corp. Tahap ini mencakup:
+    Berdasarkan hasil investigasi dan teori pendukung, dilakukan analisis terhadap efektivitas tata kelola AE saat ini di Paragon Corp. Tahap ini mencakup:
     \begin{enumerate}[a.]
-        \item Penilaian tingkat kematangan EA menggunakan kerangka \textit{Enterprise Architecture Maturity Model (EAMM)}.
-        \item Melakukan (\textit{gap analysis}) antara kondisi saat ini dan \textit{best practice} tata kelola EA. \\
+        \item Penilaian tingkat kematangan AE menggunakan kerangka \textit{Enterprise Architecture Maturity Model (EAMM)}.
+        \item Melakukan analisis \textit{gap} antara kondisi saat ini dan \textit{best practice} tata kelola AE. \\
     \end{enumerate}
 
-    \item {Tahap perancangan model perbaikan \textit{EA Governance}} \\
-    Pada tahap ini dirancang model perbaikan tata kelola EA yang lebih terstruktur, selaras dengan \textit{maturity level} yang ditargetkan, dan sesuai konteks organisasi. 
+    \item {Tahap perancangan model perbaikan tata kelola AE} \\
+    Pada tahap ini dirancang model perbaikan tata kelola AE yang lebih terstruktur, selaras dengan \textit{maturity level} yang ditargetkan, dan sesuai konteks organisasi. 
 %    Model rancangan akan mencakup komponen peran dan tanggung jawab, proses kerja, serta mekanisme evaluasi dan pembaruan artefak EA. \\
 
     \item {Tahap evaluasi dan validasi model} \\
-    Model yang dihasilkan kemudian dievaluasi untuk menilai kelayakan dan dampaknya terhadap efektivitas pengelolaan EA. Evaluasi dilakukan melalui:
+    Model yang dihasilkan kemudian dievaluasi untuk menilai kelayakan dan dampaknya terhadap efektivitas pengelolaan AE. Evaluasi dilakukan melalui:
     \begin{enumerate}[a.]
-        \item \textit{Expert review} bersama \textit{stakeholder} internal Paragon Corp.
-        \item Analisis perbandingan antara kondisi sebelum dan sesudah penerapan model secara konseptual. \\
+        \item \textit{Expert review} bersama pemnagku kepentingan internal Paragon Corp.
+        \item Analisis perbandingan antara kondisi sebelum dan sesudah penerapan model. \\
     \end{enumerate}
 \end{enumerate}
