--- a/daftar-pustaka.bib
+++ b/daftar-pustaka.bib
@@ -1,3 +1,34 @@
+@article{tamm2011does,
+  title={How does enterprise architecture add value to organisations?},
+  author={Tamm, Toomas and Seddon, Peter B and Shanks, Graeme and Reynolds, Peter},
+  year={2011},
+  publisher={Deakin University}
+}
+
+@book{bernard2012introduction,
+  title={An introduction to enterprise architecture},
+  author={Bernard, Scott A},
+  year={2012},
+  publisher={AuthorHouse}
+}
+
+@inproceedings{hillmann2024enterprise,
+  title={Enterprise Architecture Governance of Excellence},
+  author={Hillmann, Peter and Kesseler, Mario and Diana, Schnell and Goran, Mihelcic and Andreas, Karcher},
+  booktitle={International Conference on Enterprise Information Systems},
+  year={2024}
+}
+
+@article{hanafi2023implementation,
+  title={Implementation of Enterprise Architecture with Leadership Moderation Effects as a Performance Model for Regency/City Local Government Agencies in West Java Province},
+  author={Hanafi, Ridha and Furqon, Choirul and others},
+  journal={Journal of Law and Sustainable Development},
+  volume={11},
+  number={9},
+  pages={e548--e548},
+  year={2023}
+}
+
 @misc{vandewetering2021dynamicenterprisearchitecturecapabilities,
       title={Dynamic enterprise architecture capabilities and organizational benefits: an empirical mediation study}, 
       author={Rogier van de Wetering},
@@ -148,6 +179,7 @@
     title = {{Paragon Technology and Innovation}},
     url = {https://www.paragon-innovation.com/},
     organization = {ParagonCorp},
+    year = {2025},
     note = {Akses dilakukan pada 2 November 2025} 
 }
 
@@ -156,6 +188,7 @@
     title = {{A Definitive Guide to Enterprise Architecture Governance}},
     url = {https://www.leanix.net/en/wiki/ea/enterprise-architecture-governance},
     organization = {SAP LeanIX},
+    year = {2025},    
     note = {Akses dilakukan pada 2 November 2025} 
 }
 
@@ -175,14 +208,4 @@
     journal = {SAP LeanIX Blog},
     year = {2018},
     note = {Diakses pada 2 November 2025}
-}
-
-@phdthesis{Hanafi2023PeranEA,
-    author = {Hanafi, Ridha},
-    title = {{Peran Arsitektur Enterprise dalam Peningkatan Kinerja Pemerintah Daerah Kabupaten/Kota di Provinsi Jawa Barat}},
-    school = {{Universitas Pendidikan Indonesia (UPI)}},
-    year = {2023},
-    type = {Disertasi S3},
-    url = {http://repository.upi.edu/109784/},
-    note = {Diakses pada 2 November 2025} 
 }
